<resources>
    <string name="app_name">CalculadoraXml</string>
    <string name="Numero0">0</string>
    <string name="Numero1">1</string>
    <string name="Numero2">2</string>
    <string name="Numero3">3</string>
    <string name="Numero4">4</string>
    <string name="Numero5">5</string>
    <string name="Numero6">6</string>
    <string name="Numero7">7</string>
    <string name="Numero8">8</string>
    <string name="Numero9">9</string>
    <string name="Sumar">+</string>
    <string name="Restar">-</string>
    <string name="Multiplicar">*</string>
    <string name="Dividir">/</string>
    <string name="Igual">=</string>
    <string name="Borrar">AC</string>
    <string name="Coma">,</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonSumar">+</string>
    <string name="buttonRestar">-</string>
    <string name="buttonMultiplicar">*</string>
    <string name="buttonDividir">/</string>
    <string name="buttonIgual">=</string>
    <string name="buttonAC">AC</string>
    <string name="buttonComa">,</string>
</resources>